--- a/templates/client/client.html.twig
+++ b/templates/client/client.html.twig
@@ -55,7 +55,7 @@
 
     <!--Botón para volver a la última página visitada-->
     {# <input type="button" onclick="history.back()" name="Back" value="Back"> #}
-    <input type="button" value="Back" id ="boton" onClick="location.reload();"/>
+    <input class="btn btn-primary" type="button" value="Volver" id ="boton" onClick="location.reload();"/>
     
 </div>
 {% endblock %}
