--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -1,13 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Facturas{% endblock %}
+{% block title %}Clientes{% endblock %}
 
 {% block javascripts %}
 
     {{ parent() }}
-    <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
     <script type="text/javascript" src="{{ asset("js/ClientInfo.js") }}"></script>
-    <link rel="stylesheet" href="{{ asset("css/main.css") }}">
 
 {% endblock %}
 
@@ -23,53 +21,54 @@
             <div class="col-md-9 col-lg-10">
                 <div class="container main-container">
                     <div class="row flex-xl-nowrap">
-                        <div class="panel panel-table">
+                        <div class="panel panel-table" id="sect">
                             <div class="panel-heading">
-                                
-
-    <div id="showAllClients"></div> 
-    <section id="sect">
-        <div id="titulo">
-        
-            <h1>Mis Clientes <a href="{{ 'clientes/agregar-nuevo-cliente' }}"><img src="{{asset("img/añadir.png")}}" alt="Añadir" 
-                                     id="añadir" /></a></h1>
-        
-            <form action="{{ path('search', {id: company_id})}}" method="POST" id="search">
-                    <input type="search" id="buscador" name="buscador" placeholder=" Buscar...">
-                    <button type="submit" >Buscar</button>        
-            </form>              
-        </div>
-        <div id="clientes">
-            {% for clients in client %}
-            
-                <ul>
-                    <li>
-                        <p>
-                            <div id="oneClient">
-                                <a href="{{ path('show', {id:clients.id}) }}">{{ clients.name }}</a>
+                                <h3>Mis Clientes</h3>
+                                <a href="{{ path('addNewClient', {id: company_id}) }}"><button><i class="fas fa-plus"></i></button></a>
                             </div>
-                            <div id="iconos">
-                                <a href="{{ path('editar', {id: clients.id}) }}"><img 
-                                        src="{{asset("img/EditarEmpleados.png")}}" alt="" /></a>
-                                <a href=" {{ path('delete',{id: clients.id}) }} ">
-                                        <img src="{{asset("img/borrar.png")}}" alt="Borrar" id="delete"/></a>
+                            <div class="panel-search">
+                                <form action="{{ path('search', {id: company_id})}}" method="POST" id="search">
+                                    <div class="form-group">
+                                        <label class="control-label" for="buscador">Buscar cliente</label>
+                                        <input class="form-control" type="search" id="buscador" name="buscador" placeholder=" Buscar...">
+                                    </div>
+                                    <div class="form-actions">
+                                        <button class="btn btn-primary" type="submit" >Buscar</button>
+                                    </div>    
+                                </form>
                             </div>
-                        </p>
-                    </li>
-                </ul> 
-                <hr>
-            {% endfor %}
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Cliente</th>
+                                        <th width="75px" scope="col">Editar</th>
+                                        <th width="75px" scope="col">Eliminar</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% set counter = 0 %}
+                                    {% for clients in client %}
+                                        {% set counter = counter + 1 %}
+                                        <tr>
+                                            <th>{{ counter }}</th>
+                                            <td><a id="oneClient" href="{{ path('show', {id:clients.id}) }}">{{ clients.name }}</a></td>
+                                            <td><a href="{{ path('editar', {id_client: clients.id, id: company_id}) }}"><button name="edit" class="edit"><i class="fas fa-edit"></i></button></a></td>
+                                            <td><a href="{{ path('delete', {id: clients.id}) }}"><button name="delete" class="delete"><i class="far fa-trash-alt"></i></button></a></td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-            
-    </section>
- 
+    </div>
 
 
     {% block footer_javascripts %}
         
-        <script src="https://unpkg.com/jspdf@1.5.3/dist/jspdf.min.js"></script>
-        <script src="https://unpkg.com/jspdf-autotable@3.2.13/dist/jspdf.plugin.autotable.js"></script>
-        <script src="{{ asset("js/invoice.js") }}"></script>
         <script src="{{ asset("js/menu-company.js") }}"></script>
 
     {% endblock %}
