--- a/templates/form/addnewclient.html.twig
+++ b/templates/form/addnewclient.html.twig
@@ -43,7 +43,7 @@
         </div>
     </section>
  
-    <input type="button" onclick="history.back()" name="Back" value="Back" id="backR">
+    i<nput type="button" onclick="history.back()" name="Back" value="Back" id="backR">
 
     {% block footer_javascripts %}
         
