--- a/templates/form/addnewcompany.html.twig
+++ b/templates/form/addnewcompany.html.twig
@@ -22,30 +22,18 @@
                     <div class="form-group">
                         <label for="nameCompany">Nombre </label>
                         {{ form_widget(editCompany_form.name, { 'attr': {'class': 'form-control form-control-lg rounded-0 ', 'placeholder':'Company Name', 'name':'nombre de la empresa', 'id':'nameCompany'}}) }}
-                        {# {% for errorItem in editCompany_form.email.vars.errors %}
-                            <span class="help-inline">{{ errorItem.message }}</span>
-                        {% endfor %} #}
                     </div>
                     <div class="form-group">
                         <label for="fiscalAdressCompany">Direccion Fiscal</label>
                         {{ form_widget(editCompany_form.fiscalAddress, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'name':'domicilio fiscal de la empresa', 'placeholder':'Domicilio Fiscal', 'id':'fiscalAdressCompany'} }) }}
-                        {# {% for errorItem in editCompany_form.name.vars.errors %}
-                            <span class="help-inline">{{ errorItem.message }}</span>
-                        {% endfor %}#}
                     </div>
                     <div class="form-group">
                         <label for="emailCompany">Email</label>
                         {{ form_widget(editCompany_form.email, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'name':'email de la empresa', 'placeholder':'Email Company', 'id':'emailCompany'} }) }}
-                        {# {% for errorItem in editCompany_form.plainPassword.vars.errors %}
-                            <span class="help-inline">{{ errorItem.message }}</span>
-                        {% endfor %}#}
                     </div>
                     <div class="form-group">
                         <label for="nifCompany">NIF</label>
                         {{ form_widget(editCompany_form.NIF, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'name':'NIF de la empresa', 'id':'nifCompany', 'placeholder':'NIF'} }) }}
-                        {# {% for errorItem in editCompany_form.plainPassword.vars.errors %}
-                            <span class="help-inline">{{ errorItem.message }}</span>
-                        {% endfor %}#}
                     </div>
                     <div class="form-actions">
                         <a class="btn btn-secundary" href="{{ relative_path('/companies') }}">Volver a Empresas</a>
@@ -61,5 +49,6 @@
     {% block javascripts %}
         {{ parent() }}
         <script src="{{ asset('js/companyScript.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('js/validationCompany.js') }}" type="text/javascript"></script>
     {% endblock %}
 {% endblock %}
