commit fernando 5 de marzo 21:41

--- a/templates/form/addnewcompany.html.twig
+++ b/templates/form/addnewcompany.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Editar Empresa{% endblock %}
+{% block title %}Crear Nueva Empresa{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
