--- a/templates/form/addnewcompany.html.twig
+++ b/templates/form/addnewcompany.html.twig
@@ -32,7 +32,7 @@
                         {{ form_widget(editCompany_form.email, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'name':'email de la empresa', 'placeholder':'Email Company', 'id':'emailCompany'} }) }}
                     </div>
                     <div class="form-group">
-                        <label for="nifCompany">NIF</label>
+                        <label for="nifCompany">NIF => (A12345678)</label>
                         {{ form_widget(editCompany_form.NIF, { 'attr': {'class': 'form-control form-control-lg rounded-0', 'name':'NIF de la empresa', 'id':'nifCompany', 'placeholder':'NIF'} }) }}
                     </div>
                     <div class="form-actions">
