commit fernando 6 de marzo 02:58

--- a/templates/company/index.html.twig
+++ b/templates/company/index.html.twig
@@ -13,7 +13,7 @@
 
     <div class="container main-container">
         <div class="row">
-            <div class="panel">
+            <div class="panel col-sm-auto col-md-auto col-lg-auto col-xl-10">
                 <div class="panel-heading">
                     <h3>Mis Empresas :  {{ numberCompanies }} de {{ nMaxComanies }}</h3>
                     {% if numberCompanies <   nMaxComanies %}
