--- a/templates/bill/pdf_bill.html.twig
+++ b/templates/bill/pdf_bill.html.twig
@@ -21,7 +21,7 @@
             <tbody>
                 <tr>
                     <td>{{ bill.numberBill }}</td>
-                    <td>{{ bill.dateBill|date("m/d/Y") }}</td>
+                    <td>{{ bill.dateBill|date("d/m/Y") }}</td>
                     <td>{{ bill.descriptionBill }}</td>
                     <td>{{ bill.amountIVA }}€</td>
                     <td>{{ bill.amountWithoutIVA }}€</td>
