--- a/templates/form/editclient.html.twig
+++ b/templates/form/editclient.html.twig
@@ -91,4 +91,9 @@
         </div>
     </div>
 
+    {% block javascripts %}
+        {{ parent() }}
+        <script src="{{ asset("js/menu-company.js") }}"></script>
+    {% endblock %}
+
 {% endblock %}
