Commit Fernando 06 de marzo 13:36

--- a/templates/company/editCompany.html.twig
+++ b/templates/company/editCompany.html.twig
@@ -99,7 +99,7 @@
                                             <img class="card-img-top" class="rounded-6" style="border-radius: 2px;" src="img/{{socialNetwork.name}}.png" alt="{{socialNetwork.name}}">
                                             <div class="card-body">
                                                 <h5 class="card-title" align="center">{{socialNetwork.name}}</h5>
-                                                <a href="https://www.facebook.com/" class="btn btn-primary">Go {{socialNetwork.name}}</a>
+                                                <a href="{{socialNetwork.URL}}" class="btn btn-primary" target="_blank">Go {{socialNetwork.name}}</a>
 
                                                 <a href="/deleteSocialNetwork?idC={{ companies.id }}&idS={{ socialNetwork.id }}" class="btn btn-primary mt-3"> Borrar</a>
                                             </div>
