--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -17,9 +17,14 @@
                                 <a href="{{ path('addProduct', {id:company_id}) }}"><button><i class="fas fa-plus"></i></button></a>
                             </div>
                             <div class="panel-search">
-                                <form action="{{ path('product',{id:company_id}) }}" method="POST">
-                                    <p>Search Product: </p><input type="text" name="name" id="name">
-                                    <input type="submit" value="Submit">
+                                <form action="{{ path('product',{id: company_id}) }}" method="POST" id="search">
+                                    <div class="form-group">
+                                        <label class="control-label" for="buscador">Buscar producto</label>
+                                        <input class="form-control" type="search" id="name" name="name" placeholder=" Buscar...">
+                                    </div>
+                                    <div class="form-actions">
+                                        <button class="btn btn-primary" type="submit" >Buscar</button>
+                                    </div>    
                                 </form>
                             </div>
                             <table class="table">
