--- a/public/css/main2.css
+++ b/public/css/main2.css
@@ -313,6 +313,7 @@
 
 .panel-search{
     padding: 12px 8px;
+    display: flex;
 }
 
 .show, .edit, .delete {
@@ -388,24 +389,28 @@
     height: calc(2.25rem + 2px);
 }
 
-#searchDate, #search {
+.search-form {
+    margin-right: 18px;
+}
+
+.search-form > form, #search {
     display: flex;
 }
 
-#searchDate label, #search label {
+.search-form > form label, .select-search > label, #search label {
     font-weight: bold;
 }
 
-#searchDate .form-actions, #search .form-actions {
+.search-form > form .form-actions, #search .form-actions {
     display: flex;
     align-items: center;
 }
 
-#searchDate .form-actions > button, #search .form-actions {
+.search-form > form .form-actions > button, #search .form-actions {
     margin-top: 9px;
 }
 
-#searchDate div, #search div {
+.search-form > form div, #search div {
     margin-right: 6px;
 }
 
@@ -416,4 +421,19 @@
 
 .invoice-form .table-bordered select {
     min-width: 142px;
+}
+
+.search-forms .search-form {
+    display: none;
+}
+
+
+/* Modal */
+
+.modal {
+    background: rgba(0,0,0,.3);
+}
+
+.modal .modal-dialog {
+    transition: 2s;
 }
