--- a/templates/bill/index.html.twig
+++ b/templates/bill/index.html.twig
@@ -13,6 +13,7 @@
 
     {% include 'header.html.twig' %}
     {% include 'menu-user.html.twig' %}
+    {% include 'modal.html.twig' %}
 
     <div class="container-fluid">
         <div class="row">
@@ -27,47 +28,65 @@
                                 <a href="{{ path('addNewBill', {id:company_id}) }}"><button><i class="fas fa-plus"></i></button></a>
                             </div>
                             <div class="panel-search">
-                                {# <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchNumberBill">
-                                    <div class="form-group">
-                                        <label class="control-label" for="numberBill">Número de Factura</label>
-                                        <input class="form-control" type="text" name="numberBill" id="numberBill">
+                                <div class="search-forms">
+                                    <div class="search-form search-number-bill">
+                                        <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchNumberBill">
+                                            <div class="form-group">
+                                                <label class="control-label" for="numberBill">Número de Factura</label>
+                                                <input class="form-control" type="text" name="numberBill" id="numberBill">
+                                            </div>
+                                            <div class="form-actions">
+                                                <button class="btn btn-primary" type="submit">Buscar</button>
+                                            </div>
+                                        </form>
                                     </div>
-                                    <div class="form-actions">
-                                        <button class="btn btn-primary" type="submit">Buscar</button>
+                                    <div class="search-form search-description">
+                                        <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchDescription">
+                                            <div class="form-group">
+                                                <label class="control-label" for="description">Descripción de la Factura</label>
+                                                <input class="form-control" type="text" name="description" id="description">
+                                            </div>
+                                            <div class="form-actions">
+                                                <button class="btn btn-primary" type="submit">Buscar</button>
+                                            </div>
+                                        </form>
                                     </div>
-                                </form>
-                                <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchDescription">
-                                    <div class="form-group">
-                                        <label class="control-label" for="description">Descripción de la Factura</label>
-                                        <input class="form-control" type="text" name="description" id="description">
+                                    <div class="search-form search-client">
+                                        <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchClient">
+                                            <div class="form-group">
+                                                <label class="control-label" for="client">Cliente de la Factura</label>
+                                                <input class="form-control" type="text" name="client" id="client">
+                                            </div>
+                                            <div class="form-actions">
+                                                <button class="btn btn-primary" type="submit">Buscar</button>
+                                            </div>
+                                        </form>
                                     </div>
-                                    <div class="form-actions">
-                                        <button class="btn btn-primary" type="submit">Buscar</button>
+                                    <div class="search-form search-date">
+                                        <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchDate">
+                                            <div class="form-group">
+                                                <label class="control-label" for="start-date">Fecha Inicio</label>
+                                                <input class="form-control" type="Date" name="start-date" id="start-date">
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="control-label" for="end-date">Fecha Fin</label>
+                                                <input class="form-control" type="Date" name="end-date" id="end-date">
+                                            </div>
+                                            <div class="form-actions">
+                                                <button class="btn btn-primary" type="submit">Buscar</button>
+                                            </div>
+                                        </form>
                                     </div>
-                                </form>
-                                <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchClient">
-                                    <div class="form-group">
-                                        <label class="control-label" for="client">Cliente de la Factura</label>
-                                        <input class="form-control" type="text" name="client" id="client">
-                                    </div>
-                                    <div class="form-actions">
-                                        <button class="btn btn-primary" type="submit">Buscar</button>
-                                    </div>
-                                </form> #}
-                                <form action="{{ path('bills', {id:company_id}) }}" method="POST" id="searchDate">
-                                    <div class="form-group">
-                                        <label class="control-label" for="start-date">Fecha Inicio</label>
-                                        <input class="form-control" type="Date" name="start-date" id="start-date">
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label" for="end-date">Fecha Fin</label>
-                                        <input class="form-control" type="Date" name="end-date" id="end-date">
-                                    </div>
-                                    <div class="form-actions">
-                                        <button class="btn btn-primary" type="submit">Buscar</button>
-                                    </div>
-                                </form>
-                                
+                                </div>
+                                <div class="form-group select-search">
+                                    <label class="control-label" for="select-search">Buscar por</label>
+                                    <select class="form-control rounded-sm" id="select-search">
+                                        <option value="1">Nº de factura</option>
+                                        <option value="2">Descripción de la Factura</option>
+                                        <option value="3">Cliente de la Factura</option>
+                                        <option value="4">Fecha</option>
+                                    </select>
+                                </div>
                             </div>
                             <table class="table">
                                 <thead>
@@ -83,8 +102,18 @@
                                 </thead>
                                 <tbody>
                                     {% set counter = 0 %}
+                                    {% if total == true %}
+                                        {% set total_iva = 0 %}
+                                        {% set total_without_iva = 0 %}
+                                        {% set total_amount = 0 %}
+                                    {% endif %}
                                     {% for bill in bills %}
                                         {% set counter = counter + 1 %}
+                                        {% if total == true %}
+                                            {% set total_without_iva = total_without_iva + bill.amountIVA %}
+                                            {% set total_without_iva = total_without_iva + bill.amountWithoutIVA %}
+                                            {% set total_amount = total_amount + bill.totalInvoiceAmount %}
+                                        {% endif %}
                                         <tr>
                                             <td>{{ bill.numberBill }}</td>
                                             <td>{{ bill.dateBill|date("d/m/Y") }}</td>
@@ -102,6 +131,15 @@
                                             {% endif %}
                                         </tr>
                                     {% endfor %}
+                                    {% if total == true %}
+                                        <tr class="total">
+                                            <th>Total</th>
+                                            <td></td>
+                                            <td>{{ total_without_iva }}€</td>
+                                            <td>{{ total_without_iva }}€</td>
+                                            <th>{{ total_amount }}€</th>
+                                        </tr>
+                                    {% endif %}
                                 </tbody>
                             </table>
                         </div>
