--- a/templates/form/invoice_form.html.twig
+++ b/templates/form/invoice_form.html.twig
@@ -38,6 +38,12 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-6 col-md-5 col-lg-4">
+                                                <div>
+                                                    {% if last_date is defined %}
+                                                        <label classs="control-label">Anterior factura - {{ last_date|date("d/m/Y") }}</label>
+                                                        <input id="last-date" type="hidden" value="{{ last_date|date("m/d/Y") }}">
+                                                    {% endif %}
+                                                </div>
                                                 <div class="form-group">
                                                     <label for="add_new_bill_dateBill" class="control-label">Fecha</label>
                                                     <div class="select-date-form">
@@ -130,7 +136,7 @@
                                                             {% endfor %}
                                                         {% else %}
                                                             <tr>
-                                                                <th scope="row">0</th>
+                                                                <th scope="row">1</th>
                                                                 <td>
                                                                     <select id="add_new_bill_billLines_0_product" name="add_new_bill[billLines][0][product]" class="form-control rounded-sm">
                                                                         <option value="null">----------</option>
